--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,8 @@
 .piolibdeps
 .vscode/c_cpp_properties.json
 .vscode/launch.json
+.vscode/.browse.c_cpp.db*
+src/.DS_Store
+.vscode/settings.json
+.vscode/extensions.json
+.DS_Store
